src/test/ui/traits/negative-impls/negative-default-impls.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/negative-default-impls.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0750]: negative impls cannot be default impls
  --> $DIR/negative-default-impls.rs:9:1
   |
LL | default impl !MyTrait for u32 {}
   | ^^^^^^^      ^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0750`.
